--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,27 @@
 node_modules
+.env
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Diretórios do sistema operacional
+.DS_Store
+Thumbs.db
+
+# Dependências do pacote
+package-lock.json
+yarn.lock
+
+# Diretórios de build
+dist
+build
+
+# Test coverage
+coverage
+
+# Configurações do editor
+.vscode
+.idea
